traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:29: error: type mismatch;
 found   : Int
 required: String
  ecritMessage(c:String)
               ^